orcamento os producao

--- a/app/templates/quotes/pdf/orcamento_pdf_template.html
+++ b/app/templates/quotes/pdf/orcamento_pdf_template.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div id="header_content" class="header">
-        <strong>{{ company_name|default:"Sua Empresa LTDA" }}</strong><br>
+        <strong>{{ company_name|default:"mod64bits" }}</strong><br>
         Águas de Lindoia /SP<br>
         Telefone: (19) 99911-3836 | Email: mod64bits@gmail.com
         <div style="float: right; text-align: right;">
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div id="footer_content" class="footer">
-        {{ company_name|default:"Sua Empresa" }} - Todos os direitos reservados.<br>
+        {{ company_name|default:"mod64bits" }} - Todos os direitos reservados.<br>
         Página <pdf:pagenumber /> de <pdf:pagecount />
     </div>
 
@@ -171,7 +171,7 @@
 
         <p style="margin-top:15mm;">
         <span class="signature-line"></span><br>
-        {{ company_name|default:"Sua Empresa LTDA" }}
+        {{ company_name|default:"mod64bits" }}
         </p>
     </div>
 
