--- a/app/templates/financial/contareceber_detail.html
+++ b/app/templates/financial/contareceber_detail.html
@@ -8,7 +8,14 @@
 <div class="row">
     <div class="col-md-7">
         <div class="card card-primary card-outline">
-            <div class="card-header"><h3 class="card-title">Detalhes da Fatura</h3></div>
+            <div class="card-header">
+                <h3 class="card-title">Detalhes da Fatura</h3>
+                <div class="card-tools">
+                    <a href="{% url 'financial:contareceber_receipt_pdf' conta.pk %}" target="_blank" class="btn btn-sm btn-info">
+                        <i class="fas fa-receipt"></i> Gerar Recibo
+                    </a>
+                </div>
+            </div>
             <div class="card-body">
                 <dl class="row">
                     <dt class="col-sm-4">Fatura Nº:</dt><dd class="col-sm-8">{{ conta.id }}</dd>
