--- a/app/templates/financial/pdf/receipt_pdf_template.html
+++ b/app/templates/financial/pdf/receipt_pdf_template.html
@@ -30,7 +30,7 @@
         <table style="border: none; margin: 0;">
             <tr>
                 <td style="border: none;" class="company-info">
-                    <strong>{{ company_name|default:"Sua Empresa LTDA" }}</strong><br>
+                    <strong>{{ company_name|default:"mod64bits" }}</strong><br>
                     Rua Exemplo, 123 - Bairro Exemplo<br>
                     Cidade/UF - CEP: 00000-000<br>
                     Telefone: (00) 0000-0000
@@ -99,7 +99,7 @@
 
     <div class="signature-area">
         <span class="signature-line"></span>
-        <span>{{ company_name|default:"Sua Empresa LTDA" }}</span>
+        <span>{{ company_name|default:"mod64bits" }}</span>
     </div>
 
 </body>
