--- a/app/templates/reports/pdf/filtered_report_pdf_template.html
+++ b/app/templates/reports/pdf/filtered_report_pdf_template.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div id="header_content" class="header">
-        <strong>{{ company_name|default:"Sua Empresa" }}</strong> - Relatório de Atividades
+        <strong>{{ company_name|default:"mod64bits" }}</strong> - Relatório de Atividades
         <div style="float: right;">Data: {{ report_date|date:"d/m/Y H:i" }}</div>
     </div>
     <div id="footer_content" class="footer">
