--- a/app/templates/servicedesk/pdf/ticket_pdf_template.html
+++ b/app/templates/servicedesk/pdf/ticket_pdf_template.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div id="header_content" class="header">
-        <strong>{{ company_name|default:"Sua Empresa" }}</strong> - Relatório de Ticket
+        <strong>{{ company_name|default:"mod64bits" }}</strong> - Relatório de Ticket
     </div>
     <div id="footer_content" class="footer">
         Página <pdf:pagenumber /> de <pdf:pagecount />
